# htmxample

./: Cargo.toml  justfile  railwind.config.ron
assets/: railwind.css
src/: main.rs
templates/: contact.stpl.html  doc.stpl.html
