[package]
name = "htmxample"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
sailfish = "0.8.3"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
